# sciml-dirp

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: burgers.ipynb  pseudospectral.ipynb
sciml/: plotting.py  psuedospectral.py  utils.py
scripts/: kortewegdevries.py  kuramotoshivashinsky_1d.py  kuramotoshivashinsky_2d.py  pinn.py
