[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sciml"
module-root = ""

[project]
name = "sciml-dirp"
version = "0.1.0"
description = "Code for the fall 2025 scientific machine learning DiRP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "equinox",
    "diffrax",
    "optax",
    "numpy",
    "tqdm",
    "jaxtyping",
    "ipykernel",
    # plotting
    "matplotlib",
    "seaborn",
    "celluloid",
    "imageio-ffmpeg"
]

[tool.ruff]
line-length = 120
ignore = ["E402", "F722"]

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = false
